:triangular_flag_on_post: cursor pointer on card hover

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -184,7 +184,7 @@ const articles = [
 				<div class='relative space-y-3 md:space-y-4'>
 					{
 						articles.map((article) => (
-							<a class='group flex scale-100 overflow-visible transition-transform before:absolute before:top-0 before:left-0 before:-z-10 before:h-full before:w-full before:rounded-lg before:border before:border-cyan-300 before:bg-slate-900 after:absolute after:top-0 after:left-0 after:-z-20 after:h-full after:w-full after:scale-100 after:bg-cyan-700 after:blur-sm hover:scale-105 hover:after:blur-md'>
+							<a class='group flex scale-100 overflow-visible transition-transform before:absolute before:top-0 before:left-0 before:-z-10 before:h-full before:w-full before:rounded-lg before:border before:border-cyan-300 before:bg-slate-900 after:absolute after:top-0 after:left-0 after:-z-20 after:h-full after:w-full after:scale-100 after:bg-cyan-700 after:blur-sm hover:scale-105 hover:cursor-pointer hover:after:blur-md'>
 								<div>
 									<div class='relative h-fit w-full overflow-x-clip'>
 										<h2 class='pr-4 pl-6 pt-3 text-3xl tracking-wide line-clamp-2'>
