--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -184,28 +184,28 @@ const articles = [
 				<div class='relative space-y-3 md:space-y-4'>
 					{
 						articles.map((article) => (
-							<a class='group flex scale-100 overflow-visible transition-transform before:absolute before:top-0 before:left-0 before:-z-10 before:h-full before:w-full before:rounded-lg before:border before:border-cyan-300 before:bg-slate-900 after:absolute after:top-0 after:left-0 after:-z-20 after:h-full after:w-full after:scale-100 after:bg-cyan-700 after:blur-sm hover:scale-105 hover:cursor-pointer hover:after:blur-md active:scale-100'>
+							<a class='group flex scale-100 overflow-visible transition-transform before:absolute before:top-0 before:left-0 before:-z-10 before:h-full before:w-full before:rounded-lg before:border before:border-accent-300 before:bg-brand-900 after:absolute after:top-0 after:left-0 after:-z-20 after:h-full after:w-full after:scale-100 after:bg-accent-700 after:blur-sm hover:scale-105 hover:cursor-pointer hover:after:blur-md active:scale-100'>
 								<div>
 									<div class='relative h-fit w-full overflow-x-clip'>
 										<h2 class='pr-4 pl-6 pt-3 text-3xl tracking-wide line-clamp-2'>
 											{article.title}
 										</h2>
-										<div class='absolute top-2 -left-0 h-full w-0 border-[12px] border-transparent border-l-cyan-400 transition-transform' />
+										<div class='absolute top-2 -left-0 h-full w-0 border-[12px] border-transparent border-l-accent-400 transition-transform' />
 									</div>
 									<p class='mt-4 mb-4 pl-6 pr-4 line-clamp-3'>{article.desc}</p>
 								</div>
 
-								<div class='relative w-48 flex-none overflow-hidden rounded-r border-r-2 border-b-2 border-cyan-300 bg-cyan-300 before:absolute before:-bottom-2 before:right-0 before:h-8 before:rotate-45 before:border-[10px] before:border-transparent before:border-l-slate-900 before:transition-transform before:duration-300 before:ease-out group-hover:before:-translate-x-[63px] group-hover:before:translate-y-2.5 group-hover:before:border-[18px] '>
-									<div class='text-body absolute -bottom-0 -right-24 h-6 w-20 rounded-br rounded-tl bg-slate-900 pt-0.5 text-sm italic text-cyan-100 transition-transform duration-300 ease-out group-hover:-translate-x-24'>
+								<div class='relative w-48 flex-none overflow-hidden rounded-r border-2 border-l-0 border-accent-300 bg-accent-500 before:absolute before:-bottom-2 before:right-0 before:h-8 before:rotate-45 before:border-[10px] before:border-transparent before:border-l-brand-900 before:transition-transform before:duration-300 before:ease-out group-hover:before:-translate-x-[63px] group-hover:before:translate-y-2.5 group-hover:before:border-[18px] '>
+									<span class='text-body absolute -bottom-0 -right-24 h-6 w-20 rounded-br rounded-tl bg-brand-900 pt-0.5 text-sm italic text-accent-100 transition-transform duration-300 ease-out group-hover:-translate-x-24'>
 										read more
-									</div>
+									</span>
 								</div>
 							</a>
 						))
 					}
 				</div>
 				<a
-					class='hover:after:h-0s relative mt-8 px-6 font-head text-xl text-white transition-all after:absolute after:left-1/2 after:top-1/2 after:-z-10 after:h-full after:w-full after:-translate-x-1/2 after:-translate-y-1/2 after:border-8 after:border-transparent after:border-x-cyan-300 after:transition-transform after:duration-300 hover:cursor-pointer hover:tracking-widest hover:after:w-1/4 hover:after:-translate-y-[42.5%] hover:after:-rotate-90 active:after:scale-75 active:after:duration-100'
+					class='hover:after:h-0s relative mt-8 px-6 font-head text-xl text-white transition-all after:absolute after:left-1/2 after:top-1/2 after:-z-10 after:h-full after:w-full after:-translate-x-1/2 after:-translate-y-1/2 after:border-8 after:border-transparent after:border-x-accent-300 after:transition-transform after:duration-300 hover:cursor-pointer hover:tracking-widest hover:after:w-1/4 hover:after:-translate-y-[42.5%] hover:after:-rotate-90 active:after:scale-75 active:after:duration-100'
 					>More CSS articles</a
 				>
 			</div>
