--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -184,18 +184,18 @@ const articles = [
 				<div class='relative space-y-3 md:space-y-4'>
 					{
 						articles.map((article) => (
-							<a class='group flex scale-100 overflow-visible transition-transform before:absolute before:top-0 before:left-0 before:-z-10 before:h-full before:w-full before:rounded-lg before:border before:border-accent-300 before:bg-brand-900 after:absolute after:top-0 after:left-0 after:-z-20 after:h-full after:w-full after:scale-100 after:bg-accent-700 after:blur-sm hover:scale-105 hover:cursor-pointer hover:after:blur-md active:scale-100'>
+							<a class='group flex scale-100 overflow-visible transition-transform before:absolute before:top-0 before:left-0 before:-z-10 before:h-full before:w-full before:rounded-lg before:border before:border-accent-300 before:bg-gradient-to-r before:from-brand-900 before:to-brand-800 after:absolute after:top-0 after:left-0 after:-z-20 after:h-full after:w-full after:scale-100 after:bg-accent-700 after:blur-sm hover:scale-105 hover:cursor-pointer hover:after:blur-md active:scale-100'>
 								<div>
 									<div class='relative h-fit w-full overflow-x-clip'>
 										<h2 class='pr-4 pl-6 pt-3 text-3xl tracking-wide line-clamp-2'>
 											{article.title}
 										</h2>
-										<div class='absolute top-2 -left-0 h-full w-0 border-[12px] border-transparent border-l-accent-400 transition-transform' />
+										<div class='absolute top-2 -left-0 h-full w-0 border-[12px] border-transparent border-l-accent-300 transition-transform' />
 									</div>
 									<p class='mt-4 mb-4 pl-6 pr-4 line-clamp-3'>{article.desc}</p>
 								</div>
 
-								<div class='relative w-48 flex-none overflow-hidden rounded-r border-2 border-l-0 border-accent-300 bg-accent-500 before:absolute before:-bottom-2 before:right-0 before:h-8 before:rotate-45 before:border-[10px] before:border-transparent before:border-l-brand-900 before:transition-transform before:duration-300 before:ease-out group-hover:before:-translate-x-[63px] group-hover:before:translate-y-2.5 group-hover:before:border-[18px] '>
+								<div class='relative w-48 flex-none overflow-hidden rounded-r border-2 border-l-0 border-accent-300 bg-gradient-to-r from-accent-300 to-accent-500 before:absolute before:-bottom-2 before:right-0 before:h-8 before:rotate-45 before:border-[10px] before:border-transparent before:border-l-brand-900 before:transition-transform before:duration-300 before:ease-out group-hover:before:-translate-x-[63px] group-hover:before:translate-y-2.5 group-hover:before:border-[18px] '>
 									<span class='text-body absolute -bottom-0 -right-24 h-6 w-20 rounded-br rounded-tl bg-brand-900 pt-0.5 text-sm italic text-accent-100 transition-transform duration-300 ease-out group-hover:-translate-x-24'>
 										read more
 									</span>
