:iphone: responsive card

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -178,24 +178,26 @@ const articles = [
 		</section>
 
 		<section id='blog' class='relative h-screen w-full'>
-			<div class='mx-auto flex max-w-screen-md flex-col items-center px-4 md:px-0'>
-				<object class='my-8 md:my-12 lg:mt-20' data={CSS} type='image/svg+xml'></object>
+			<div class='mx-auto flex max-w-screen-md flex-col items-center px-4 md:px-8 lg:px-0'>
+				<object class='my-8 md:my-12 lg:mt-16' data={CSS} type='image/svg+xml'></object>
 
-				<div class='relative space-y-3 md:space-y-4'>
+				<div class='relative space-y-4'>
 					{
 						articles.map((article) => (
 							<a class='group flex scale-100 overflow-visible transition-transform before:absolute before:top-0 before:left-0 before:-z-10 before:h-full before:w-full before:rounded-lg before:border before:border-accent-300 before:bg-gradient-to-r before:from-brand-900 before:to-brand-800 after:absolute after:top-0 after:left-0 after:-z-20 after:h-full after:w-full after:scale-100 after:bg-accent-700 after:blur-sm hover:scale-105 hover:cursor-pointer hover:after:blur-md active:scale-100'>
 								<div>
 									<div class='relative h-fit w-full overflow-x-clip'>
-										<h2 class='pr-4 pl-6 pt-3 text-3xl tracking-wide line-clamp-2'>
+										<h2 class='pr-4 pl-6 pt-3 text-2xl tracking-wide line-clamp-2 md:text-3xl'>
 											{article.title}
 										</h2>
 										<div class='absolute top-2 -left-0 h-full w-0 border-[12px] border-transparent border-l-accent-300 transition-transform' />
 									</div>
-									<p class='mt-4 mb-4 pl-6 pr-4 line-clamp-3'>{article.desc}</p>
+									<p class='mt-4 mb-4 pl-6 pr-4 leading-5 line-clamp-4 md:leading-normal md:line-clamp-3'>
+										{article.desc}
+									</p>
 								</div>
 
-								<div class='relative w-48 flex-none overflow-hidden rounded-r border-2 border-l-0 border-accent-300 bg-gradient-to-r from-accent-300 to-accent-500 before:absolute before:-bottom-2 before:right-0 before:h-8 before:rotate-45 before:border-[10px] before:border-transparent before:border-l-brand-900 before:transition-transform before:duration-300 before:ease-out group-hover:before:-translate-x-[63px] group-hover:before:translate-y-2.5 group-hover:before:border-[18px] '>
+								<div class='relative w-36 flex-none overflow-hidden rounded-r border-2 border-l-0 border-accent-300 bg-gradient-to-r from-accent-300 to-accent-500 before:absolute before:-bottom-2 before:right-0 before:h-8 before:rotate-45 before:border-[10px] before:border-transparent before:border-l-brand-900 before:transition-transform before:duration-300 before:ease-out group-hover:before:-translate-x-[63px] group-hover:before:translate-y-2.5 group-hover:before:border-[18px] md:w-48 '>
 									<span class='text-body absolute -bottom-0 -right-24 h-6 w-20 rounded-br rounded-tl bg-brand-900 pt-0.5 text-sm italic text-accent-100 transition-transform duration-300 ease-out group-hover:-translate-x-24'>
 										read more
 									</span>
