--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -32,5 +32,25 @@ import Layout from 'layouts/Layout.astro'
 			</section>
 		</div>
 
+		<div id='content' class='mx-auto flex max-w-screen-lg flex-col gap-8 pb-12'>
+			<div id='profile' class='grid grid-cols-12 pt-8'>
+				<div class='col-span-3 h-32'>
+					<h3>Profile</h3>
+				</div>
+				<div class='col-span-9 h-32'>
+					<p>
+						Self-learned front-end developer focused to create engaging and intuitive UI. With over
+						three years of experience using React and its ecosystem, including Next.js, I prioritize
+						the user experience by optimizing performance. I leverage TypeScript extensively to
+						ensure fast and reliable development, and build design systems with Tailwind CSS to make
+						products stand out & consistent. As a seasonal full-stack developer, I have extensive
+						experience building APIs, using ORM/SQL, and managing databases.
+						<br />
+						I am looking for collaborative and supportive environment where we can build innovative product
+						grow together as a team.
+					</p>
+				</div>
+			</div>
+		</div>
 	</div>
 </Layout>
