--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -51,6 +51,118 @@ import Layout from 'layouts/Layout.astro'
 					</p>
 				</div>
 			</div>
+
+			<div id='works' class='grid grid-cols-12 pt-8'>
+				<div class='col-span-3'>
+					<h3>Work Experiences</h3>
+				</div>
+
+				<div class='col-span-9 flex flex-col gap-4'>
+					<div>
+						<p class='flex justify-between font-bold'>
+							<span>Full-stack Developer - Freelance</span>
+							<span>07/22 — now</span>
+						</p>
+						<ul class='list-disc font-body text-white'>
+							<li>
+								Developed full-stack applications using Next.js, utilizing various rendering
+								techniques such as SSG, ISR, and SSR to improve performance and SEO depending on the
+								page type.
+							</li>
+							<li>
+								Integrating Prisma ORM, tRPC, and react-query on the back-end to make type-safe
+								APIs, that are easy to call and manage.
+							</li>
+							<li>
+								Migrating project to a monorepo using Turborepo to make package reusable in multiple
+								apps
+							</li>
+							<li>
+								Added a react native (Expo) to the existing project and integrated it with the
+								back-end and auth using Clerk.
+							</li>
+							<li>
+								Built a personal website with Astro that achieved a perfect 100 score on Lighthouse.
+							</li>
+							<li>
+								Enhanced page interactivity with the island architecture with SolidJS framework on
+								it.
+							</li>
+							<li>
+								Created stunning animations using pure CSS, resulting in visually appealing pages
+								even without JavaScript.
+							</li>
+							<li>
+								Developed a responsive design system using Tailwind CSS for faster & easier styling.
+							</li>
+							<li>
+								Deployed and maintained databases using Planetscale, resulting in zero downtime and
+								easier migration management.
+							</li>
+							<li>Developed an app with improved accessibility using ChakraUI.</li>
+							<li>Designed multiple landing page mockups using Figma.</li>
+							<li>
+								Created a custom markdown editor with Tiptap, incorporating all the features users
+								expect from a rich text editor.
+							</li>
+							<li>Implemented infinite scroll for blog posts, resulting in faster query speeds.</li>
+						</ul>
+					</div>
+
+					<div>
+						<p class='flex justify-between font-bold'>
+							<span>Front-end Developer at Achiko AG</span>
+							<span>09/20 — 06/22</span>
+						</p>
+						<ul class='list-disc font-body text-white'>
+							<li>
+								Led & finished dashboard app revamp project within four months with a new design
+								system, resulting in increased user engagement and improved UX.
+							</li>
+							<li>
+								Improved code safety and reliability by porting legacy code to TypeScript, resulting
+								in a more maintainable and scalable codebase.
+							</li>
+							<li>
+								Optimized app performance by reducing bundle size with code-splitting, resulting in
+								faster page load times and improved user experience.
+							</li>
+							<li>
+								Designed and developed an interactive chart feature, providing users with valuable
+								insights and data visualization capabilities.
+							</li>
+							<li>
+								Implemented an advanced table system to handle complex data, improving data
+								management and organization for users.
+							</li>
+							<li>
+								Created a complex form with advanced validation, resulting in a user-friendly and
+								error-free data input experience.
+							</li>
+							<li>
+								Managed async server state with client caching, resulting in faster data retrieval
+								and a more responsive app.
+							</li>
+							<li>
+								Developed a data export feature to Excel and PDF, allowing users to easily export
+								and share data with others.
+							</li>
+							<li>
+								Built a custom markdown editor for rich text content, providing a more flexible and
+								customizable content creation experience.
+							</li>
+							<li>
+								Implemented React Suspend and optimistic rendering to improve user experience,
+								resulting in smoother and more responsive app performance.
+							</li>
+							<li>
+								Collaborated with the back-end team to adjust API for the new dashboard, ensuring
+								seamless integration and improved overall app functionality.
+							</li>
+						</ul>
+					</div>
+				</div>
+			</div>
 		</div>
 	</div>
 </Layout>
