--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -163,6 +163,24 @@ import Layout from 'layouts/Layout.astro'
 					</div>
 				</div>
 			</div>
+
+			<div id='education' class='grid grid-cols-12'>
+				<div class='col-span-3 h-32'>
+					<h3>Education</h3>
+				</div>
+				<div class='col-span-9 h-32 space-y-4'>
+					<div>
+						<p>Full-stack Javascript Bootcamp</p>
+						<p>Hacktiv8, Jakarta</p>
+						<p>Feb - Jun 2020</p>
+					</div>
+					<div>
+						<p>Bachelor of Engineering Physics</p>
+						<p>Sepuluh Nopember Institute of Technology (ITS), Surabaya</p>
+						<p>2013 - 2017</p>
+					</div>
+				</div>
+			</div>
 		</div>
 	</div>
 </Layout>
