--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -47,9 +47,7 @@ import Layout from 'layouts/Layout.astro'
 						experience building APIs, using ORM/SQL, and managing databases.
 					</p>
 					<p class='indent-8'>
-						<br />
-						I am looking for collaborative and supportive environment where we can build innovative product
-						grow together as a team.
+						I am looking for collaborative and supportive environment where we can grow together as
 						a team through solving problem and build innovative product.
 					</p>
 				</div>
