--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -55,14 +55,14 @@ import Layout from 'layouts/Layout.astro'
 
 			<div id='works' class='grid grid-cols-12'>
 				<div class='col-span-3'>
-					<h3 class='text-xl'>Work Experiences</h3>
+					<h3 class='text-xl'>Work Experience</h3>
 				</div>
 
 				<div class='col-span-9 flex flex-col gap-4'>
 					<div>
 						<p class='flex justify-between'>
 							<span class='text-lg font-bold'>Full-stack Developer - Freelance</span>
-							<span class='italic'>07/22 — now</span>
+							<span class='italic'>July 2022 — now</span>
 						</p>
 						<ul class='list-disc font-body text-white'>
 							<li>
@@ -113,7 +113,7 @@ import Layout from 'layouts/Layout.astro'
 					<div>
 						<p class='flex justify-between'>
 							<span class='text-lg font-bold'>Front-end Developer at Achiko AG</span>
-							<span class='italic'>09/20 — 06/22</span>
+							<span class='italic'>September 2020 — June 2022</span>
 						</p>
 						<ul class='list-disc font-body text-white'>
 							<li>
@@ -175,14 +175,14 @@ import Layout from 'layouts/Layout.astro'
 							<p class='text-lg font-bold'>Full-stack Javascript Developer</p>
 							<p>Hacktiv8 Bootcamp, Jakarta</p>
 						</div>
-						<p class='italic'>February - June 2020</p>
+						<p class='italic'>February — June 2020</p>
 					</div>
 					<div class='flex justify-between'>
 						<div class='leading-loose'>
 							<p class='text-lg font-bold'>Bachelor of Engineering Physics</p>
 							<p>Sepuluh Nopember Institute of Technology (ITS), Surabaya</p>
 						</div>
-						<p class='italic'>2013 - 2017</p>
+						<p class='italic'>2013 — 2017</p>
 					</div>
 				</div>
 			</div>
