--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -186,6 +186,33 @@ import Layout from 'layouts/Layout.astro'
 					</div>
 				</div>
 			</div>
+
+			<div id='skills' class='grid grid-cols-12'>
+				<div class='col-span-3'>
+					<h3 class='text-xl'>Skills</h3>
+				</div>
+				<ul class='col-span-3 list-disc text-white'>
+					<li>React</li>
+					<li>React Native</li>
+					<li>Next.js</li>
+					<li>TailwindCSS / SASS</li>
+					<li>Prisma / Sequelize</li>
+				</ul>
+				<ul class='col-span-3 list-disc text-white'>
+					<li>tRPC</li>
+					<li>TanStack query, table, router</li>
+					<li>Auth.js / OAuth</li>
+					<li>Zustand / Redux</li>
+					<li>ReactHookForm / Formik</li>
+				</ul>
+				<ul class='col-span-3 list-disc text-white'>
+					<li>MySQL (PlanetScale)</li>
+					<li>Node.js</li>
+					<li>Astro</li>
+					<li>SolidJs</li>
+					<li>Figma</li>
+				</ul>
+			</div>
 		</div>
 	</div>
 </Layout>
