--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -213,6 +213,29 @@ import Layout from 'layouts/Layout.astro'
 					<li>Figma</li>
 				</ul>
 			</div>
+
+			<div id='languages' class='grid grid-cols-12'>
+				<div class='col-span-3'>
+					<h3 class='text-xl'>Languages</h3>
+				</div>
+				<div class='col-span-9 space-y-4'>
+					<p>
+						<span><b>English</b> as international language</span>
+						<br />
+						<span>Professional working proficiency (C1)</span>
+					</p>
+					<p>
+						<span><b>Bahasa Indonesia</b> as national language</span>
+						<br />
+						<span>Native / bilingual proficiency</span>
+					</p>
+					<p>
+						<span><b>Javanese</b> as local language</span>
+						<br />
+						<span>Native / bilingual proficiency</span>
+					</p>
+				</div>
+			</div>
 		</div>
 	</div>
 </Layout>
